feat: give each node its own southbound token
